Fix main page styling in dark mode

--- a/documentation/reflaxe-theme/resources/extra-styles.css
+++ b/documentation/reflaxe-theme/resources/extra-styles.css
@@ -181,7 +181,7 @@ body {
   padding: 8px;
 }
 
-.dark-theme .page-header {
+.dark-theme .page-header, .dark-theme .table-condensed {
   background-color: rgba(0, 0, 0, 0.7);
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
